# vector-search

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
api/: alembic.ini  crud.py  database.py  dockerfile  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  settings.py
api/alembic/: env.py
api/alembic/versions/: bac2cad3bc5a_initial_migration.py  ea6028930f24_change_date.py
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 2025_12_16_0011-87c5b8fda872_.py
api/routers/: data.py  search.py
api/scrpits/: load_data.py
