[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cpu"
